--- a/12_HTML_CSS/page.html
+++ b/12_HTML_CSS/page.html
@@ -1,188 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <style>
-    html, body{
-      margin: 0;
-      padding: 0;
-      background-color: #f6f7f9;
-    }
-    header{
-      border: 1px solid red;
-      height: 100px;
-      padding: 0 40px;
-    }
-    header > div{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .first-block{
-      height: 300px;
-      border: 1px solid red;
-    }
-    .first-block > div{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      background-image: url("img/deema.png");
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: right center;
-    }
-    section{
-      border: 1px solid red;
-      padding: 40px;
-    }
-    .services{
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 30px;
-    }
-    .services div{
-      200px;
-      border: 1px solid red;
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="style_page.css" rel="stylesheet">
+<script>
+    document.addEventListener("DOMContentLoaded", function(){
+      var container = document.querySelector('.popup-container')
+      var popupButtons = document.querySelectorAll('.open-popup')
+      for(let i = 0; i < popupButtons.length; i++){
+        popupButtons[i].addEventListener('click', function (){
+          container.style.display = 'flex';
+        })
+      }
+      container.addEventListener('click', function(event){
+        if(event.target == container) {
+          container.style.display = 'none';
+        }
+      });
 
-    }
-    .services > img{
-      width: 150px;
-    }
-    footer{
-      border: 1px solid red;
-      padding: 40px;
-    }
-    .fixed-container{
-      max-width: 1000px;
-      height:100%;
-      margin-left: auto;
-      margin-right: auto;
+    });
+</script>
 
-    }
-    .price-info{
-      background-color: #0f00d5;
-      color: #f6f7f9;
-    }
-
-    .light_button{
-      border: 1px solid #808080;
-      background-color: transparent;
-    }
-    .durk_button{
-      border: 1px solid #0f00d5;
-      background-color: #0f00d5;
-      color: white;
-    }
-    button{
-      border-radius: 5px;
-      padding: 10px 30px;
-      cursor: pointer;
-    }
-
-    .price-list{
-      border: 1px solid blueviolet;
-    }
-    .price-list thead{
-      background-color: #b0b0b0;
-    }
-    .price-list tfoot{
-      background-color: #b0b0b0;
-      font-weight: bold;
-    }
-
-
-
-  </style>
 </head>
 <body>
+
+<div class="popup-container">
+  <form class="popup">
+    <input type="text" name="popup_name" placeholder="Введите ваше имя">
+    <input type="text" name="phone" placeholder="Номер телефона">
+    <input type="button" value="Отправить">
+  </form>
+</div>
+
+
+
 <header>
   <div class="fixed-container">
     <div>
       <a href="#">Услуги</a>
-      <a href="#">Услуги</a>
-      <a href="#">Услуги</a>
+      <a href="#">Портфолио</a>
+      <a href="#">Стоимость</a>
     </div>
     <div>
-      <span>8-800-2000-600</span>
-      <button class="light_button">Заказать звоник</button>
+      <span>+7(495) 555 666</span>
+      <button class="light_button open-popup">Заказать звоник</button>
     </div>
   </div>
 </header>
 
 <section class="first-block">
   <div class="fixed-container">
-  <h1>Дмитрий алексеев</h1>
+  <h1>Дмитрий Алексеев</h1>
     <h2>Frontend разработчик и web верстальщик.</h2>
-    <button class="durk_button">Заказать звонок</button>
+    <button class="durk_button open-popup">Заказать звонок</button>
   </div>
 </section>
+
 <section>
   <div class="fixed-container">
   <h2>Что я делаю</h2>
     <div class="services">
-      <div><img src="img/programming.png" alt="programming">Вёрстка лендинг–страниц и сайтов любой сложности</div>
-      <div><img src="img/responsive.png" alt="responsive">Адаптивная вёрстка под все браузеры и устройства</div>
-      <div><img src="img/tools-and-utensils.png" alt="tools-and-utensils">Frontend – разработка и программирование</div>
-      <div><img src="img/coding.png" alt="codding">Исправление и доработка существующей вёрстки</div>
+      <div><img src="icons/1.png" alt="programming"><p>Вёрстка лендинг–страниц и сайтов любой сложности</p></div>
+      <div><img src="icons/2.png" alt="responsive"><p>Адаптивная вёрстка под все браузеры и устройства</p></div>
+      <div><img src="icons/3.png" alt="tools-and-utensils"><p>Frontend – разработка и программирование</p></div>
+      <div><img src="icons/4.png" alt="codding"><p>Исправление и доработка существующей вёрстки</p></div>
     </div>
     <button class="light_button">Заказать звонок</button>
   </div>
 </section>
+
 <section>
   <div class="fixed-container">
-  <h2>Портфоллио</h2>
+  <h2>Примеры работ</h2>
+    <div class="work">
+      <div><img src="work/e1.png" alt=""><p>Сайт психолога</p></div>
+      <div><img src="work/e2.png" alt=""><p>Сайт магазина</p></div>
+      <div><img src="work/e3.png" alt=""><p>Сайт рыболовов</p></div>
+    </div>
   </div>
 </section>
+
 <section class="price-info">
   <div class="fixed-container">
-    <h2>Текст адаптивная верска под все устройства и браузеры от 5000руб!</h2>
+    <h2>Адаптивная верска под все устройства и браузеры от 1000 руб!</h2>
+    <p>* Срок и стоимость могут отличаться от заявленных и рассчитываются индивидуально, в зависимости от сложности задач.</p>
   </div>
 </section>
 
-<table class="price-list">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Наименования работ</th>
-      <th>Цена</th>
-    </tr>
-  </thead>
 
-<tbody>
-  <tr>
-    <th>1</th>
-    <td>Верстка</td><th>10 000 руб.</th>
-  </tr>
-  <tr>
-    <th>3</th>
-    <td>Верстка</td><th>10 000 руб.</th>
-  </tr>
-  <tr>
-    <th>3</th>
-    <td>Верстка</td><th rowspan="2">10 000 руб.</th>
-  </tr>
-  <tr>
-    <th>4</th>
-    <td>Верстка</td>
-  </tr>
-</tbody>
-
-  <tfoot>
-    <tr>
-      <td colspan="2">Итого: </td><td>2000 0000 руб.</td>
-    </tr>
-  </tfoot>
-
-</table>
 
 <footer>
   <div class="fixed-container">
-    <a href="#">Услуги</a>
-    <a href="#">Услуги</a>
-    <a href="#">Услуги</a>
+
+    <div class="footer_wrapper">
+      <div class="footer_menu">
+        <a href="#">Услуги</a>
+        <a href="#">Портфолио</a>
+        <a href="#">Стоимость</a>
+      </div>
+
+      <div class="footer_info">
+        <a href="#">dmitriy@alekseev.com</a>
+        <a href="#">+7(495) 555 666</a>
+      </div>
+
+      <div class="footer_button">
+        <button class="light_button open-popup">Заказать звоник</button>
+        <div class="footer_button_link">
+          <a href="#"><img src="footer_icons/fb.png"></a>
+          <a href="#"><img src="footer_icons/inst.png"></a>
+          <a href="#"><img src="footer_icons/telegram.png"></a>
+          <a href="#"><img src="footer_icons/vk.png"></a>
+          <a href="#"><img src="footer_icons/you.png"></a>
+        </div>
+      </div>
+    </div>
+
   </div>
+
 </footer>
 
 </body>
